# AgentOS

./: .gitignore  CLAUDE.md  HANDOFF.md  LOCAL_SETUP.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  VPS_SETUP.md  claude.md  next.config.ts  package-lock.json  package.json  start-mac.sh  start.sh
.claude/: settings.json
app/: HANDOFF.md  globals.css  index.html  layout.tsx  next.config.ts  (+3 more)
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/agent-config/templates/: code-review-engineer.yaml  customer-support.yaml  secretary.yaml
backend/agent-runtime/: Dockerfile  entrypoint.sh  server.py
backend/agent-runtime/skills/github-list-prs/: SKILL.md
backend/agent-runtime/skills/github-pr-review/: SKILL.md
backend/agent-runtime/skills/send-email/: SKILL.md
backend/agent-runtime/skills/send-slack-message/: SKILL.md
backend/app/: auth.py  config.py  main.py
backend/app/models/: __init__.py  agent.py  credential.py  user.py
backend/app/routers/: agents.py  auth.py  chat.py  credentials.py  gateway.py  roles.py  tasks.py  users.py
backend/app/schemas/: agent.py  credential.py  task.py  user.py
backend/app/services/: credential_store.py  dispatcher.py  gateway.py  orchestrator.py  template_loader.py
backend/app/utils/: crypto.py
backend/migrations/: 001_initial_schema.sql  002_add_github_credential.sql
backend/tests/: conftest.py  test_agent_runtime.py  test_agents.py  test_credentials.py  test_crypto.py  test_dispatcher.py  test_gateway.py  test_health.py  test_orchestrator.py  test_roles.py  test_schemas.py  test_tasks.py  test_users.py
(+66 files in other folders)
